--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Matrix4.cpp" />
     <ClCompile Include="scene\GameScene.cpp" />
+    <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="XMFloat.cpp" />
   </ItemGroup>
   <ItemGroup>
